update ScalaZ3, disable quine tests sadly